@@ -12,7 +12,7 @@
 
     <groupId>io.swagger.codegen.v3</groupId>
     <artifactId>swagger-codegen-generators</artifactId>
-    <version>1.0.24-SNAPSHOT</version>
+    <version>1.0.46-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <build>
@@ -20,16 +20,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
+                <version>3.10.1</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.0.1</version>
+                <version>3.5.0</version>
                 <configuration>
                     <aggregate>true</aggregate>
                     <source>1.8</source>
@@ -53,7 +49,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>3.0.1</version>
+                <version>3.2.1</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -65,12 +61,19 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
+                <version>${surefire-version}</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit4</artifactId>
+                        <version>${surefire-version}</version>
+                    </dependency>
+                </dependencies>
                 <configuration>
-                    <argLine>
-                        -javaagent:${settings.localRepository}/org/jmockit/jmockit/${jmockit-version}/jmockit-${jmockit-version}.jar
-                    </argLine>
+                    <testNGArtifactName>none:none</testNGArtifactName>
+                    <argLine>-javaagent:${settings.localRepository}/org/jmockit/jmockit/${jmockit-version}/jmockit-${jmockit-version}.jar -XX:+IgnoreUnrecognizedVMOptions --add-opens=java.base/java.util=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
         </plugins>
@@ -118,7 +121,7 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>${jackson-version}</version>
+                <version>${jackson-databind-version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
@@ -216,6 +219,12 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit-version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>${slf4j-version}</version>
@@ -242,33 +251,35 @@
         <dependency>
             <groupId>com.atlassian.commonmark</groupId>
             <artifactId>commonmark</artifactId>
-            <version>0.9.0</version>
+            <version>0.17.0</version>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>2.8.47</version>
+            <version>2.28.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
     <properties>
-        <swagger-codegen-version>3.0.24-SNAPSHOT</swagger-codegen-version>
-        <swagger-parser-version>2.0.23</swagger-parser-version>
-        <swagger-core-version>2.1.4</swagger-core-version>
-        <jackson-version>2.10.3</jackson-version>
+        <maven.compiler.release>8</maven.compiler.release>
+        <swagger-codegen-version>3.0.52-SNAPSHOT</swagger-codegen-version>
+        <swagger-parser-version>2.1.19</swagger-parser-version>
+        <swagger-core-version>2.2.19</swagger-core-version>
+        <jackson-version>2.15.3</jackson-version>
+        <jackson-databind-version>2.15.3</jackson-databind-version>
         <scala-version>2.11.1</scala-version>
         <felix-version>3.3.0</felix-version>
-        <commons-io-version>2.4</commons-io-version>
-        <commons-cli-version>1.2</commons-cli-version>
-        <junit-version>4.13.1</junit-version>
+        <commons-io-version>2.15.0</commons-io-version>
+        <commons-cli-version>1.6.0</commons-cli-version>
+        <junit-version>4.13.2</junit-version>
         <maven-plugin-version>1.0.0</maven-plugin-version>
-        <commons-lang-version>3.4</commons-lang-version>
-        <slf4j-version>1.7.12</slf4j-version>
+        <commons-lang-version>3.14.0</commons-lang-version>
+        <slf4j-version>1.7.36</slf4j-version>
         <scala-maven-plugin-version>3.2.1</scala-maven-plugin-version>
-        <testng-version>6.9.6</testng-version>
-        <surefire-version>2.19.1</surefire-version>
-        <jmockit-version>1.42</jmockit-version>
-        <reflections-version>0.9.11</reflections-version>
+        <testng-version>7.8.0</testng-version>
+        <surefire-version>3.1.2</surefire-version>
+        <jmockit-version>1.49</jmockit-version>
+        <reflections-version>0.10.2</reflections-version>
 
     </properties>
 
